tests/snapshots/execution_spec__inline-index-list.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "username": "Leanne Graham"
    }
  }
}
