tests/snapshots/execution_spec__inline-index-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  username: String
}

scalar Url

schema {
  query: Query
}
