tests/snapshots/execution_spec__inline-many.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Address {
  city: String
  street: String
  zipcode: String
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User @addField(name: "city", path: ["address", "city"]) @addField(name: "street", path: ["address", "street"]) @addField(name: "zipcode", path: ["address", "zipcode"]) {
  address: Address @modify(omit: true)
  name: String
}
