tests/snapshots/execution_spec__input-type-protected-error.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Input types can not be protected",
    "trace": [
      "Input",
      "value",
      "@protected"
    ],
    "description": null
  },
  {
    "message": "Input types can not be protected",
    "trace": [
      "NewPost",
      "content",
      "@protected"
    ],
    "description": null
  }
]
