tests/snapshots/execution_spec__io-cache.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "title": "a",
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "title": "b",
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "title": "c",
          "user": {
            "name": "Ervin Howell"
          }
        },
        {
          "title": "d",
          "user": {
            "name": "Ervin Howell"
          }
        },
        {
          "title": "e",
          "user": {
            "name": "Ervin Howell"
          }
        },
        {
          "title": "f",
          "user": {
            "name": "Ervin Howell"
          }
        }
      ]
    }
  }
}
