tests/snapshots/execution_spec__js_request-to-js-runtime.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "x-tailcall": "tailcall-header"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 11,
          "title": "foo",
          "body": "bar"
        }
      ]
    }
  }
}
